backend: fix cable report decision header
Changed to table layout for "Päivämäärä"/"Tunnus" headings
to avoid layout problems.

--- a/backend/pdf-service/stylesheets/new-style.sass
+++ b/backend/pdf-service/stylesheets/new-style.sass
@@ -70,20 +70,19 @@ hr
       float: right
       font-style: normal
 
-    div.id
+    .id
       clear: both
       display: block
 
-      dt
-        display: inline-block
-        width: 30%
-        font-size: $p-small-font-size
-      dd
-        display: inline
-        font-size: $p-font-size
-      dd:after
-        display: block
-        content: ''
+      table
+        width: 100%
+        border-style: none
+        td.c1
+          width: 35%
+          font-size: $p-small-font-size
+        td.c2
+          display: inline
+          font-size: $p-font-size
 
 .body
 
